--- a/banana-middle-end/banana-middle-end-admin/src/main/resources/bootstrap.yml
+++ b/banana-middle-end/banana-middle-end-admin/src/main/resources/bootstrap.yml
@@ -17,6 +17,21 @@ spring:
 ---
 
 spring:
+  profiles: jpx
+  cloud:
+    nacos:
+      config:
+        server-addr: 47.101.179.208:8848
+        file-extension: yml
+        group: jpx
+        namespace: e2845b88-8a38-4c37-8369-8d6b048159ad
+      discovery:
+        server-addr: 47.101.179.208:8848
+        group: jpx
+        namespace: e2845b88-8a38-4c37-8369-8d6b048159ad
+---
+
+spring:
   profiles: local
   cloud:
     config:
