--- a/banana-middle-end/banana-middle-end-job/banana-middle-end-job-admin/pom.xml
+++ b/banana-middle-end/banana-middle-end-job/banana-middle-end-job-admin/pom.xml
@@ -14,8 +14,10 @@
         <maven.deploy.skip>true</maven.deploy.skip>
         <app.docker.skip>true</app.docker.skip>
         <app.docker.url></app.docker.url>
+        <docker.image.prefix></docker.image.prefix>
         <mybatis-spring-boot-starter.version>1.3.4</mybatis-spring-boot-starter.version>
         <spring-cloud-starter-alibaba.version>0.9.0.RELEASE</spring-cloud-starter-alibaba.version>
+        <com.alibaba.cloud.version>2.1.2.RELEASE</com.alibaba.cloud.version>
     </properties>
 
     <dependencies>
@@ -30,9 +32,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
+            <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>${spring-cloud-starter-alibaba.version}</version>
+            <version>${com.alibaba.cloud.version}</version>
         </dependency>
 
         <dependency>
@@ -170,7 +172,7 @@
 
                 <configuration>
                     <skipDocker>${app.docker.skip}</skipDocker>
-                    <imageName>banana/${project.artifactId}</imageName>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
                     <imageTags>
                         <imageTag>${project.version}</imageTag>
                     </imageTags>
@@ -183,6 +185,9 @@
                             <include>${project.build.finalName}.jar</include>
                         </resource>
                     </resources>
+
+                    <serverId>docker-hub</serverId>
+                    <registryUrl>https://index.docker.io/v1/</registryUrl>
                 </configuration>
             </plugin>
         </plugins>
