--- a/banana-middle-end/banana-middle-end-admin/pom.xml
+++ b/banana-middle-end/banana-middle-end-admin/pom.xml
@@ -17,6 +17,7 @@
         <maven.deploy.skip>true</maven.deploy.skip>
         <app.docker.skip>true</app.docker.skip>
         <app.docker.url></app.docker.url>
+        <app.docker.server.url></app.docker.server.url>
         <docker.image.prefix></docker.image.prefix>
     </properties>
 
@@ -65,21 +66,18 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.0.1.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
+                            <goal>repackage</goal>
                             <goal>build-info</goal>
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <skipTests>true</skipTests>
+                    <fork>true</fork>
+                    <includeSystemScope>true</includeSystemScope>
                 </configuration>
             </plugin>
 
@@ -115,8 +113,8 @@
                         </resource>
                     </resources>
 
-                    <serverId>docker-hub</serverId>
-                    <registryUrl>https://index.docker.io/v1/</registryUrl>
+                    <serverId>docker-harbor</serverId>
+                    <registryUrl>${app.docker.server.url}</registryUrl>
                 </configuration>
             </plugin>
         </plugins>
