jpx环境灰度调试

--- a/banana-middle-end/banana-middle-end-job/banana-middle-end-job-admin/src/main/resources/bootstrap.yml
+++ b/banana-middle-end/banana-middle-end-job/banana-middle-end-job-admin/src/main/resources/bootstrap.yml
@@ -1,4 +1,20 @@
 spring:
+  profiles: jpx
+  cloud:
+    nacos:
+      config:
+        server-addr: cloud-nacos-test.hanyuan.vip:80
+        file-extension: yml
+        group: jpx
+        namespace: 610d62b0-b2a9-4312-97c4-5462ee894017
+      discovery:
+        server-addr: cloud-nacos-test.hanyuan.vip:80
+        #        group: dev
+        namespace: 610d62b0-b2a9-4312-97c4-5462ee894017
+
+---
+
+spring:
   profiles: dev
   cloud:
     nacos:
